TestSuite/PascalABCTests/errors/err0435.pas
//!Ожидалось имя процедуры или функции
begin
  (^1);
end.